templates/deploy-n8n.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      name: n8n
  template:
    metadata:
      labels:
        name: n8n
    spec:
      containers:
        - name: nginx
          image: eu.gcr.io/topvine-co/nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5678
      volumes:
        - name: nginx
          configMap:
            name: nginx
