templates/postgre-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: sqlite-n8n
  name: sqlite-service
spec:
  clusterIP: None
  ports:
    - name: "5678"
      port: 5678
      targetPort: 5678
      protocol: TCP
  selector:
    service: sqlite-n8n
