templates/svc-n8n.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    name: n8n
